fixed translations and added final touches

--- a/mobile/assets/translations/en.json
+++ b/mobile/assets/translations/en.json
@@ -29,6 +29,7 @@
     "login": "Login",
     "register": "Register",
     "logout": "Logout",
+    "save": "Save",
     "logoutConfirm": "Are you sure you want to logout?",
     "email": "Email",
     "password": "Password",
@@ -83,7 +84,10 @@
     "next": "Next",
     "fillAllFields": "Please fill all fields",
     "successTitle": "Success!",
-    "passwordChangedSuccess": "Password changed successfully. You can now login with your new password."
+    "passwordChangedSuccess": "Password changed successfully. You can now login with your new password.",
+    "locationSharing": "location sharing",
+    "yourLocation": "your location",
+    "locationSharingHint": "This helps find nearby projects"
   },
   "common": {
     "skip": "Skip",
@@ -315,5 +319,81 @@
     "instagram": "Instagram",
     "linkedin": "LinkedIn",
     "whatsapp": "WhatsApp"
-  }
+  },
+  "ticketDetails": "Ticket Details",
+  "resolution": "Resolution",
+  "ticketId": "Ticket ID",
+  "created": "Created",
+  "assignedTo": "Assigned To",
+  "newTicket": "Add",
+  "description": "description",
+  "noTickets": "No tickets",
+  "noTicketsMessage": "You haven't created any support tickets yet",
+  "followUs": "Follow Us",
+  "privacyPolicyContent": "Privacy Policy Content...",
+  "termsOfServiceContent": "Terms of Service Content...",
+  "ticketCreated": "Ticket created successfully",
+  "ticketCreateError": "Failed to create ticket",
+  "ticketType": "Ticket Type",
+  "subject": "Subject",
+  "subjectHint": "Enter ticket subject",
+  "subjectRequired": "Subject is required",
+  "descriptionHint": "Describe your issue in detail",
+  "descriptionRequired": "Description is required",
+  "submitTicket": "Submit Ticket",
+  "location": {
+    "sortByDistance": "Nearest",
+    "sortByNewest": "Newest",
+    "distanceFilter": "Filter by Distance",
+    "distanceFilterHint": "Show results within specific range"
+  },
+  "pickImageError": "Failed to pick image",
+  "errorLoadingProducts": "Error loading products",
+  "projectDisabled": "Project Disabled",
+  "contactSupport": "Contact Support",
+  "projectDisabledMessage": "Your project has been disabled",
+  "noReasonProvided": "No reason provided",
+  "profileUpdatedSuccess": "Profile updated successfully",
+  "changePhotoSoon": "Coming Soon - Change Photo",
+  "emailCannotBeChanged": "Email cannot be changed",
+  "enterFullName": "Enter your full name",
+  "phoneHint": "05xxxxxxxx",
+  "passwordChangedSuccess": "Password changed successfully",
+  "enterCurrentAndNewPassword": "Enter current and new password",
+  "currentPassword": "Current Password",
+  "passwordHint": "••••••••",
+  "currentPasswordRequired": "Please enter current password",
+  "newPassword": "New Password",
+  "confirmNewPassword": "Confirm New Password",
+  "categoryRequests": "Category Requests",
+  "newRequest": "New Request",
+  "myRequests": "My Requests",
+  "requestNewCategory": "Request New Category",
+  "categoryRequestNote": "Note: Categories approved here will be visible to all users of the app.",
+  "categoryNameEn": "Category Name (English)",
+  "categoryNameAr": "Category Name (Arabic)",
+  "enterEnglishName": "Please enter English name",
+  "enterArabicName": "Please enter Arabic name",
+  "parentCategoryOptional": "Parent Category (Optional)",
+  "noneMainCategory": "None (Main Category)",
+  "iconNameOptional": "Icon Name (Optional)",
+  "iconHint": "e.g., restaurant, home, etc.",
+  "categoryRequestSubmitted": "Category request submitted successfully",
+  "noRequestsYet": "No requests yet",
+  "makeRequest": "Make a request",
+  "approved": "Approved",
+  "rejected": "Rejected",
+  "pending": "Pending",
+  "rejectionReason": "Rejection Reason",
+  "mainCategory": "Main Category",
+  "selectCategory": "Select Category",
+  "selectSubCategory": "Select Subcategory",
+  "clearSelection": "Clear Selection",
+  "filterByCategory": "Filter by Category",
+  "clear": "Clear",
+  "all": "All",
+  "allSubCategories": "All Subcategories",
+  "failedToLoadCategories": "Failed to load categories",
+  "noCategories": "No categories",
+  "addProduct": "Add"
 }
