--- a/mobile/assets/translations/ar.json
+++ b/mobile/assets/translations/ar.json
@@ -7,6 +7,7 @@
   "navMessages": "المحادثات",
   "navProfile": "حسابي",
   "products": "المنتجات",
+  "description": "الوصف",
   "projects": "المشاريع",
   "login": "تسجيل الدخول",
   "register": "إنشاء حساب",
@@ -29,6 +30,7 @@
     "login": "تسجيل الدخول",
     "register": "إنشاء حساب",
     "logout": "تسجيل الخروج",
+    "save": "حفظ",
     "logoutConfirm": "هل أنت متأكد من رغبتك في تسجيل الخروج؟",
     "email": "البريد الإلكتروني",
     "password": "كلمة المرور",
@@ -83,7 +85,10 @@
     "next": "التالي",
     "fillAllFields": "يرجى ملء جميع الحقول",
     "successTitle": "تم بنجاح!",
-    "passwordChangedSuccess": "تم تغيير كلمة المرور بنجاح. يمكنك الآن تسجيل الدخول باستخدام كلمة المرور الجديدة."
+    "passwordChangedSuccess": "تم تغيير كلمة المرور بنجاح. يمكنك الآن تسجيل الدخول باستخدام كلمة المرور الجديدة.",
+    "locationSharing": "مشاركة الموقع",
+    "yourLocation": "موقعي",
+    "locationSharingHint": "يساعد في ايجاد المشاريع القريبة"
   },
   "common": {
     "skip": "تخطي",
@@ -315,5 +320,80 @@
     "instagram": "إنستغرام",
     "linkedin": "لينكد إن",
     "whatsapp": "واتساب"
-  }
+  },
+  "ticketDetails": "تفاصيل التذكرة",
+  "resolution": "الحل",
+  "ticketId": "رقم التذكرة",
+  "created": "تاريخ الإنشاء",
+  "assignedTo": "مسندة إلى",
+  "newTicket": "إضافة",
+  "noTickets": "لا توجد تذاكر",
+  "noTicketsMessage": "لم تقم بإنشاء أي تذاكر دعم بعد",
+  "followUs": "تابعنا",
+  "privacyPolicyContent": "محتوى سياسة الخصوصية...",
+  "termsOfServiceContent": "محتوى شروط الاستخدام...",
+  "ticketCreated": "تم إنشاء التذكرة بنجاح",
+  "ticketCreateError": "فشل إنشاء التذكرة",
+  "ticketType": "نوع التذكرة",
+  "subject": "الموضوع",
+  "subjectHint": "أدخل موضوع التذكرة",
+  "subjectRequired": "الموضوع مطلوب",
+  "descriptionHint": "اشرح مشكلتك بالتفصيل",
+  "descriptionRequired": "الوصف مطلوب",
+  "submitTicket": "إرسال التذكرة",
+  "location": {
+    "sortByDistance": "الأقرب",
+    "sortByNewest": "الأحدث",
+    "distanceFilter": "تصفية حسب المسافة",
+    "distanceFilterHint": "عرض النتائج ضمن نطاق محدد"
+  },
+  "pickImageError": "فشل اختيار الصورة",
+  "errorLoadingProducts": "خطأ في تحميل المنتجات",
+  "projectDisabled": "المشروع معطل",
+  "contactSupport": "تواصل مع الدعم",
+  "projectDisabledMessage": "تم تعطيل مشروعك",
+  "noReasonProvided": "لم يتم تقديم سبب",
+  "profileUpdatedSuccess": "تم تحديث الملف الشخصي بنجاح",
+  "changePhotoSoon": "قريباً - تغيير الصورة",
+  "emailCannotBeChanged": "لا يمكن تغيير البريد الإلكتروني",
+  "enterFullName": "أدخل اسمك الكامل",
+  "phoneHint": "05xxxxxxxx",
+  "passwordChangedSuccess": "تم تغيير كلمة المرور بنجاح",
+  "enterCurrentAndNewPassword": "أدخل كلمة المرور الحالية والجديدة",
+  "currentPassword": "كلمة المرور الحالية",
+  "passwordHint": "••••••••",
+  "currentPasswordRequired": "يرجى إدخال كلمة المرور الحالية",
+  "newPassword": "كلمة المرور الجديدة",
+  "confirmNewPassword": "تأكيد كلمة المرور الجديدة",
+  "categoryRequests": "طلبات التصنيف",
+  "newRequest": "طلب جديد",
+  "myRequests": "طلباتي",
+  "requestNewCategory": "طلب تصنيف جديد",
+  "categoryRequestNote": "ملاحظة: التصنيفات التي تتم الموافقة عليها ستظهر لجميع مستخدمي التطبيق.",
+  "categoryNameEn": "اسم التصنيف (إنجليزي)",
+  "categoryNameAr": "اسم التصنيف (عربي)",
+  "enterEnglishName": "يرجى إدخال الاسم بالإنجليزي",
+  "enterArabicName": "يرجى إدخال الاسم بالعربي",
+  "parentCategoryOptional": "التصنيف الأب (اختياري)",
+  "noneMainCategory": "لا يوجد (تصنيف رئيسي)",
+  "iconNameOptional": "اسم الأيقونة (اختياري)",
+  "iconHint": "مثال: مطعم، منزل، إلخ",
+  "categoryRequestSubmitted": "تم إرسال طلب التصنيف بنجاح",
+  "noRequestsYet": "لا توجد طلبات بعد",
+  "makeRequest": "قدّم طلباً",
+  "approved": "موافق عليه",
+  "rejected": "مرفوض",
+  "pending": "قيد الانتظار",
+  "rejectionReason": "سبب الرفض",
+  "mainCategory": "الفئة الرئيسية",
+  "selectCategory": "اختر الفئة",
+  "selectSubCategory": "اختر الفئة الفرعية",
+  "clearSelection": "إلغاء الاختيار",
+  "filterByCategory": "تصفية حسب الفئة",
+  "clear": "مسح",
+  "all": "الكل",
+  "allSubCategories": "كل الفرعية",
+  "failedToLoadCategories": "فشل تحميل الفئات",
+  "noCategories": "لا توجد فئات",
+  "addProduct": "إضافة"
 }
